Fix: Adjust gallery image cropping

--- a/static/style.css
+++ b/static/style.css
@@ -124,6 +124,7 @@ nav a:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center top;
     display: block;
 }
 
